# agent-docs

./: .cleo-complete  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGES_FROM_ORIGINAL.md  CLAUDE.md  CONNECTION_RELIABILITY.md  CTO_REPO_CHANGES.md  CURRENT_DATABASE_CONTENT.md  Cargo.toml  DATABASE_MIGRATION_PLAN.md  DEV_SETUP.md  Dockerfile  Dockerfile.optimized  FINAL_MIGRATION_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  LICENSE  LOCAL_DB_TESTING.md  LOCAL_MIGRATION_PLAN.md  MIGRATION_VALIDATION_REPORT.md  PROJECT_ARCHITECTURE.md  PR_DESCRIPTION.md  QA_REVIEW.md  README.md  assessment_report.md  client-config.json  clippy.toml  coding-guidelines.md  coverage.lcov  crate_tools_coverage.lcov  cto-config.json  debug_discovery.py  doc-ingestion-implementation-plan.md  doc-server-tool-test-results.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  gaps_analysis.md  github-actions-rbac.yaml  (+18 more)
.cargo/: config.toml
.cursor/: mcp.json
.docs/: CLAUDE.md  codebase.md  coding-guidelines.md
.reference/: transports.md
.taskmaster/: config.json
cilium_docs/: 0001__tmp_cilium-repo_documentation_sdpapi.rst.json  0002__tmp_cilium-repo_documentation_helm-values.rst.json  0003__tmp_cilium-repo_documentation_index.rst.json  0004__tmp_cilium-repo_documentation_configuration_verify-image-signatures.rst.json  0005__tmp_cilium-repo_documentation_configuration_index.rst.json  0006__tmp_cilium-repo_documentation_configuration_sctp.rst.json  0007__tmp_cilium-repo_documentation_configuration_api-restrictions.rst.json  0008__tmp_cilium-repo_documentation_configuration_vlan-802.1q.rst.json  0009__tmp_cilium-repo_documentation_configuration_sbom.rst.json  0010__tmp_cilium-repo_documentation_configuration_api-rate-limiting.rst.json  0011__tmp_cilium-repo_documentation_configuration_api-restrictions-table.rst.json  0012__tmp_cilium-repo_documentation_configuration_argocd-issues.rst.json  0013__tmp_cilium-repo_documentation_configuration_per-node-config.rst.json  0014__tmp_cilium-repo_documentation_grpcapi.rst.json  0015__tmp_cilium-repo_documentation_security_dns.rst.json  0016__tmp_cilium-repo_documentation_security_index.rst.json  0017__tmp_cilium-repo_documentation_security_host-firewall.rst.json  0018__tmp_cilium-repo_documentation_security_elasticsearch.rst.json  0019__tmp_cilium-repo_documentation_security_http.rst.json  0020__tmp_cilium-repo_documentation_security_network_index.rst.json  0021__tmp_cilium-repo_documentation_security_network_proxy_index.rst.json  0022__tmp_cilium-repo_documentation_security_network_proxy_envoy.rst.json  0023__tmp_cilium-repo_documentation_security_network_encryption.rst.json  0024__tmp_cilium-repo_documentation_security_network_intro.rst.json  0025__tmp_cilium-repo_documentation_security_network_encryption-ipsec.rst.json  0026__tmp_cilium-repo_documentation_security_network_identity.rst.json  0027__tmp_cilium-repo_documentation_security_network_policyenforcement.rst.json  0028__tmp_cilium-repo_documentation_security_network_encryption-wireguard.rst.json  0029__tmp_cilium-repo_documentation_security_grpc.rst.json  0030__tmp_cilium-repo_documentation_security_tls-visibility.rst.json  0031__tmp_cilium-repo_documentation_security_aws.rst.json  0032__tmp_cilium-repo_documentation_security_gsg_requirements.rst.json  0033__tmp_cilium-repo_documentation_security_policy-creation.rst.json  0034__tmp_cilium-repo_documentation_security_gsg_sw_demo.rst.json  0035__tmp_cilium-repo_documentation_security_restrict-pod-access.rst.json  0036__tmp_cilium-repo_documentation_security_kafka.rst.json  0037__tmp_cilium-repo_documentation_security_policy_kubernetes.rst.json  0038__tmp_cilium-repo_documentation_security_policy_index.rst.json  0039__tmp_cilium-repo_documentation_security_policy_intro.rst.json  (+604 more)
client/: sse-connection.d.ts  sse-connection.js  (+1 more)
crates/database/: Cargo.toml
crates/database/src/: connection.rs  integration_tests.rs  lib.rs  migration_system.rs  migrations.rs  models.rs  pool_config.rs  queries.rs  retry.rs
crates/doc-loader/: Cargo.toml
crates/doc-loader/src/: extractors.rs  lib.rs  loaders.rs  migration.rs  parsers.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: batch.rs  client.rs  integration_tests.rs  lib.rs  models.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  models.rs  prompts.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: config.rs  handlers.rs  headers.rs  health.rs  lib.rs  protocol_version.rs  security.rs  server.rs  session.rs  tools.rs  transport.rs
crates/mcp/src/sse/: buffer.rs  config.rs  connection.rs  handler.rs  heartbeat.rs  mod.rs  tests.rs
crates/mcp/tests/: config_validation_test.rs  crate_management_test.rs  dynamic_tools_metadata_test.rs  dynamic_tools_test.rs  headers_compile.rs  initialize_mvp.rs  json_only_mvp_test.rs  protocol_version_integration_test.rs  protocol_version_tests.rs  routing_test.rs  session_unit_tests.rs  sse_integration_tests.rs  transport_compile.rs  transport_integration.rs
discovery/: Cargo.toml
discovery/src/: analyzer.rs  claude.rs  lib.rs
llm/: Cargo.toml
llm/src/: client.rs  embeddings.rs  integration.rs  lib.rs  models.rs  prompts.rs  search.rs
loader/: Cargo.toml
loader/src/: extractors.rs  intelligent.rs  intelligent_ingestion.rs  lib.rs  loaders.rs  main.rs  migration.rs  parsers.rs
mcp/: Cargo.toml
mcp/src/: config.rs  crate_management_test.rs  crate_tools.rs  handlers.rs  headers.rs  health.rs  ingest.rs  job_queue.rs  lib.rs  metrics.rs  protocol_version.rs  security.rs  server.rs  session.rs  tools.rs  transport.rs
mcp/src/queue/: mod.rs
mcp/tests/: config_validation_test.rs  crate_management.rs  crate_tools_unit_tests.rs  dynamic_tools_metadata_test.rs  dynamic_tools_test.rs  headers_compile.rs  initialize_mvp.rs  json_only_mvp_test.rs  protocol_version_integration_test.rs  protocol_version_tests.rs  routing_test.rs  session_unit_tests.rs  task_11_acceptance_tests.rs  test_config.json  transport_compile.rs  transport_integration.rs
rust_crates/: Cargo.toml
rust_crates/src/: lib.rs
test_server/: Cargo.toml
(+511 files in other folders)
