[package]
name = "discovery"
version = "0.1.0"
edition = "2021"
description = "Repository/document discovery using Claude Code"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
