[package]
name = "llm"
version = "0.1.0"
edition = "2021"
description = "LLM integration for summarization and query processing"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true } # Added back for OpenAI API support
async-trait = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.27", features = ["fs"] } # For FIFO creation

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }