[package]
name = "loader"
version = "0.1.0"
edition = "2021"
description = "Document loading and parsing for various documentation types"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pgvector = { workspace = true }

# CLI support for migration binary
clap = { version = "4.4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }

# HTML parsing for docs.rs content
scraper = "0.20"
html5ever = "0.27"

# URL handling
url = "2.5"

# Async traits
async-trait = { workspace = true }

# Internal dependencies
db = { path = "../db" }
embed = { path = "../embed" }
llm = { path = "../llm" }

# Octocrab for GitHub API integration
octocrab = "0.41"

# Markdown parsing
pulldown-cmark = "0.12"

# PDF parsing
pdf-extract = "0.7"

# JSON schema validation (for API specs)
jsonschema = "0.28"

# YAML parsing
serde_yaml = "0.9"

# TOML parsing
toml = "0.8"

# Additional HTTP client features (using workspace reqwest with additional features)
# reqwest features are inherited from workspace

# Base64 encoding for API calls
base64 = "0.22"

# Git repository parsing
git2 = "0.20"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }