[package]
name = "loader"
version = "0.1.0"
edition = "2021"
description = "Document loading and parsing for various documentation types"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pgvector = { workspace = true }

# CLI support for migration binary
clap = { version = "4.4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }

# HTML parsing for docs.rs content (used by loaders and parsers)
scraper = "0.20"
html5ever = "0.27"

# URL handling
url = "2.5"

# Async traits
async-trait = { workspace = true }

# Internal dependencies
db = { path = "../db" }
embed = { path = "../embed" }

# Markdown parsing
pulldown-cmark = "0.12"

# YAML parsing
serde_yaml = "0.9"

# TOML parsing
toml = "0.8"

# Additional HTTP client features (using workspace reqwest with additional features)
# reqwest features are inherited from workspace

# (Removed) Octocrab, git2, jsonschema, base64, pdf-extract — not used after refactor

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
