[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server implementation for the Doc Server"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
# brk_rmcp = { workspace = true }  # Temporarily disabled due to edition2024 requirement

# Additional dependencies for MCP server
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio-stream = { workspace = true }
url = "2.5"
sqlx = { workspace = true }
pgvector = { workspace = true }
redis = { workspace = true }

# Local crates
db = { path = "../db" }
embed = { path = "../embed" }
loader = { path = "../loader" }
discovery = { path = "../discovery" }
rust_crates = { path = "../rust_crates" }

[features]
default = []

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
futures = { workspace = true }
tower = "0.5"
