[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.7"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.mcp]
path = "../mcp"
