[package]
name = "doc-server-database"
version = "0.1.0"
edition = "2021"
description = "Database layer for the Doc Server with PostgreSQL and pgvector support"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pgvector = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }