[package]
name = "doc-server-doc-loader"
version = "0.1.0"
edition = "2021"
description = "Document loading and parsing for various documentation types"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pgvector = { workspace = true }

# CLI support for migration binary
clap = { version = "4.4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }

# HTML parsing for docs.rs content
scraper = "0.20"
html5ever = "0.27"

# URL handling
url = "2.5"

# Internal dependencies
doc-server-database = { path = "../database" }
doc-server-embeddings = { path = "../embeddings" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }