[package]
name = "doc-server-embeddings"
version = "0.1.0"
edition = "2021"
description = "Embedding generation and processing for the Doc Server using OpenAI API"
license = "MIT"

[dependencies]
# Inherit workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pgvector = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = { workspace = true }